# dreamer

./: CMakeLists.txt
cmake/: flags.cmake  module.cmake  props.cmake  stddef.cmake
include/dreamer/lexer/: Lexer.h
include/dreamer/token/: Token.h
lib/lexer/: CMakeLists.txt  Lexer.cpp
lib/token/: CMakeLists.txt  Token.cpp
