CMAKE_MINIMUM_REQUIRED(VERSION 3.30)
PROJECT(dreamer)

INCLUDE(${CMAKE_SOURCE_DIR}/cmake/stddef.cmake)

SET(SOURCES
  src/main.cpp
)
ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})
TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PRIVATE
  ${FLAGS}
)

# modules
ADD_SUBDIRECTORY(${MODULE_DIRECTORY}/lexer)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE lexer)

ADD_SUBDIRECTORY(${MODULE_DIRECTORY}/token)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE token)
