CMAKE_MINIMUM_REQUIRED(VERSION 3.30)
PROJECT(lexer)

INCLUDE(${CMAKE_SOURCE_DIR}/cmake/stddef.cmake)

SET(SOURCES
  Lexer.cpp
)
ADD_LIBRARY(${PROJECT_NAME} ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC token)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE
  ${CMAKE_SOURCE_DIR}/include
)
TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PRIVATE
  ${FLAGS}
)
