CMAKE_MINIMUM_REQUIRED(VERSION 3.30)
PROJECT(token)

INCLUDE(${CMAKE_SOURCE_DIR}/cmake/stddef.cmake)

SET(SOURCES
  Token.cpp
)
ADD_LIBRARY(${PROJECT_NAME} ${SOURCES})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE
  ${CMAKE_SOURCE_DIR}/include
)
TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PRIVATE
  ${FLAGS}
)
